fix tablet spacing

--- a/css/tablet-adapter.css
+++ b/css/tablet-adapter.css
@@ -27,7 +27,7 @@
 
 
     #check-out-more {
-        margin-top: 10em;
+        margin-top: 1em;
     }
 
     #mail {
